--- a/CLIENT168_RC14h_OK/1.68RC14h/Client/T4C Client/Resources.rc
+++ b/CLIENT168_RC14h_OK/1.68RC14h/Client/T4C Client/Resources.rc
@@ -80,7 +80,7 @@ END
 
 IDD_DIALOG2 DIALOG DISCARDABLE  0, 0, 248, 101
 STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "The 4th Coming" // steph The 4th Coming au lieu de The 4th Coming V2
+CAPTION "T4C"
 FONT 8, "MS Sans Serif"
 BEGIN
     LTEXT           "Decoding DATA.",IDC_MESSAGE,13,19,221,48
@@ -90,7 +90,7 @@ END
 
 IDD_DIALOG6 DIALOG DISCARDABLE  0, 0, 160, 73
 STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "The 4th Coming" // steph The 4th Coming au lieu de The 4th Coming V2
+CAPTION "T4C"
 FONT 8, "MS Sans Serif"
 BEGIN
     LTEXT           "Decoding DATA.",IDC_MESSAGE,13,19,130,19
